# Generated by Django 6.1.1 on 2026-09-22 08:19

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('greenhouses', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Node',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('node_id', models.CharField(max_length=100, unique=True)),
                ('node_name', models.CharField(max_length=100)),
                ('node_type', models.CharField(max_length=100)),
                ('mac_address', models.CharField(max_length=100, unique=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('last_updated', models.DateTimeField(auto_now=True)),
                ('greenHouse', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='nodes', to='greenhouses.greenhouse')),
            ],
        ),
    ]
