erDiagram
    %% ===== CLOUD / ADMIN TIER =====
    USER_AUTHENTICATION ||--o{ NODES : "owns"
    NODES ||--o{ CONDITIONS : "reports readings to"
    NODES ||--o{ NODE_RULES : "has installed"
    RULES ||--o{ NODE_RULES : "installed as"
    NODES ||--|| NODE_IDENTITY : "same hub (nodes.node_id = node_identity.node_uid)"
    NODES ||--o{ NODE_BACKGROUND_HISTORY : "has background over time (crop, growth stage)"
    NODES |o--o{ RULES : "personalizes (nullable — null = fleet-wide rule)"
    NODES ||--o{ ACTIONS_LOG_CLOUD : "logs actions for"
    CONDITIONS |o--o{ ACTIONS_LOG_CLOUD : "triggers (nullable — null = manual override)"

    %% ===== EDGE / LOCAL TIER (single-hub SQLite) =====
    NODE_IDENTITY ||--o{ CONNECTED_DEVICES : "pairs"
    CONNECTED_DEVICES ||--o{ CONDITIONS_EDGE : "produces"
    CONNECTED_DEVICES ||--o{ ACTIONS_LOG : "receives command"
    NODE_RULES ||--o{ NODE_RULES_CACHE : "pulled as"
    CONDITIONS_EDGE ||--o{ ACTIONS_LOG : "triggers (nullable)"

    %% ===== SYNC PIPELINE (batch job, not a live FK) =====
    CONDITIONS_EDGE }o--|| CONDITIONS : "batch syncs to, keyed (node_uid, local_id)"
    ACTIONS_LOG }o--|| ACTIONS_LOG_CLOUD : "batch syncs to, keyed (node_uid, local_id)"

    USER_AUTHENTICATION {
        uuid user_id PK
        string email
        string password_hash
        string role
        boolean mfa_enabled
        timestamp last_login_at
        timestamp created_at
    }

    NODES {
        uuid node_id PK
        uuid owner_user_id FK
        string node_type
        string label
        string location
        string firmware_version
        string status
        timestamp last_seen_at
        timestamp installed_at
    }

    CONDITIONS {
        bigint reading_id PK
        timestamp ts PK
        uuid node_id FK
        float temperature
        float humidity
        float soil_moisture
        float light
        float co2
        string source
    }

    RULES {
        uuid rule_id PK
        uuid node_id FK "nullable — null = fleet-wide, set = personalized to one hub"
        string scope "fleet or node"
        string crop_type
        string growth_stage
        string node_type
        json condition
        json action
        int priority
        float confidence
        float support
        string model_version
        string status
    }

    NODE_RULES {
        uuid node_id FK
        uuid rule_id FK
        timestamp installed_at
        boolean active
    }

    NODE_BACKGROUND_HISTORY {
        bigint history_id PK
        uuid node_id FK
        string crop_type
        string growth_stage
        timestamp started_at
        timestamp ended_at "nullable — null = current background"
    }

    ACTIONS_LOG_CLOUD {
        bigint action_id PK
        uuid node_id FK
        text device_id
        string action
        string triggered_by "rule, manual, ml"
        string source_ref
        bigint condition_reading_id FK "nullable, references conditions.reading_id"
        timestamp executed_at
    }

    NODE_IDENTITY {
        int id PK "always 1"
        text node_uid "unique, factory code"
        text hardware_serial
        text firmware_version
        timestamp provisioned_at
    }

    CONNECTED_DEVICES {
        text device_id PK
        string device_category "sensor or actuator"
        string device_type "temperature, humidity, valve, light..."
        string label "cosmetic display name"
        string status
        timestamp paired_at
        timestamp last_seen
        boolean synced
    }

    CONDITIONS_EDGE {
        int id PK
        text device_id FK
        string metric
        float value
        timestamp recorded_at
        boolean synced
    }

    NODE_RULES_CACHE {
        int rule_id PK
        json condition_json
        json action_json
        int version
        timestamp updated_at
    }

    ACTIONS_LOG {
        int id PK
        text device_id FK
        string action
        string triggered_by "rule, manual, ml"
        string source_ref
        int condition_id FK "nullable"
        timestamp executed_at
        boolean synced
    }